[project]
# Update these for your project
name = "dapy-template"
version = "0.1.0"
description = "Template for distributed algorithms using dapy + dapyview"

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dapy[ui] @ git+https://github.com/xdefago/dapy.git",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]

[project.optional-dependencies]
json = [
    "dapy[json] @ git+https://github.com/xdefago/dapy.git",
]

[project.scripts]
# Add your own CLI entry points here (e.g., run-my-algo)
run-bcast = "broadcast.run_bcast:main"
run-my-algo = "my_algo.run_my_algo:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# If you rename or add top-level packages under src/, update this list
module-name = ["broadcast", "my_algo"]

